<package>
  <name>survey_uwsim</name>
  <version>0.0.1</version>
  <description>survey_uwsim</description>
  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/survey_UWSim</url>

  <author>Jose Guerrero</author>
  <author>Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
